discussion/kv_engine/173424/173424_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-33549: Refactor timingLogs to use a smart pointer

Instead of passing around raw pointers, use a
smart shared_ptr and remove the destructor
containing explicit deletion.

Change-Id: I4d3d59dc2d77256c41ae3e8ed38445cdf8da587c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-07 15:00:50.000000000
Message: 
Patch Set 3: Published edit on patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 15:22:00.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45083/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_manager.cc(57): error C2039: "setLabel": is not a member of "Monotonic<int64_t,DefaultOrderReversedPolicy,0x0,BasicNameLabelPolicy,cb::greater>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45083/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37871/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:57:17:
error: no member named "setLabel" in "Monotonic<long, DefaultOrderReversedPolicy, nullptr, BasicNameLabelPolicy, cb::greater>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37871/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16489/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:601:47: error: no viable conversion from "shared_ptr<std::basic_ofstream<char> >" to "std::unique_ptr<std::ostream>" (aka "unique_ptr<basic_ostream<char> >") [clang-diagnostic-error]
                std::unique_ptr<std::ostream> tmp =
                                              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:320:12: note: candidate constructor template not viable: no known conversion from "shared_ptr<std::basic_ofstream<char> >" to "std::nullptr_t" (aka "nullptr_t") for 1st argument
        constexpr unique_ptr(nullptr_t) noexcept
                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:327:7: note: candidate constructor not viable: no known conversion from "shared_ptr<std::basic_ofstream<char> >" to "std::unique_ptr<std::basic_ostream<char>, std::default_delete<std::basic_ostream<char> > > &&" for 1st argument
      unique_ptr(unique_ptr&&) = default;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:468:7: note: candidate constructor not viable: no known conversion from "shared_ptr<std::basic_ofstream<char> >" to "const std::unique_ptr<std::basic_ostream<char>, std::default_delete<std::basic_ostream<char> > > &" for 1st argument
      unique_ptr(const unique_ptr&) = delete;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:340:2: note: candidate template ignored: could not match "unique_ptr" against "shared_ptr"
        unique_ptr(unique_ptr<_Up, _Ep>&& __u) noexcept
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:350:2: note: candidate template ignored: could not match "auto_ptr" against "shared_ptr"
        unique_ptr(auto_ptr<_Up>&& __u) noexcept;
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16489/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:601:47:
error: no viable conversion from "shared_ptr<std::basic_ofstream<char> >" to "std::unique_ptr<std::ostream>" (aka "unique_ptr<basic_ostream<char> >") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16489/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26671/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6204/ : FAILURE

Compile error at [2022-04-07T15:09:12.063Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:68:27:
error: ?class Monotonic<long int>? has no member named ?setLabel?; did you mean ?setLabeler??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6204/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6144/ : FAILURE

Compile error at [2022-04-07T15:14:20.855Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:68:27:
error: no member named "setLabel" in "Monotonic<long, ThrowExceptionPolicy, nullptr, BasicNameLabelPolicy, cb::greater>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6144/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18261/ : FAILURE

Compile error at [2022-04-07T15:16:57.311Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:68:27:
error: ?class Monotonic<long int>? has no member named ?setLabel?; did you mean ?setLabeler??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18261/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18597/ : FAILURE

Compile error at [2022-04-07T15:17:09.546Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:68:27:
error: ?class Monotonic<long int>? has no member named ?setLabel?; did you mean ?setLabeler??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18597/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17357/ : FAILURE

Compile error at [2022-04-07T15:03:38.404Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/durability/durability_monitor_impl.cc:324:43:
error: no member named "setLabel" in "Monotonic<long long, ThrowExceptionPolicy, nullptr, BasicNameLabelPolicy, cb::greater_equal>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17357/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19292/ : FAILURE

Compile error at [2022-04-07T15:14:52.158Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:68:27:
error: no member named "setLabel" in "Monotonic<long, ThrowExceptionPolicy, nullptr, BasicNameLabelPolicy, cb::greater>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19292/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15424/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
